[package]
name = "comirai-free-tour-schema"
version = "0.0.1"
authors = ["Ivan Rodriguez"]
edition = "2021"

[dependencies]
juniper = "0.15.11"
juniper-compose = "0.0.3"
enum-kinds = "0.5.1"
uuid = "1.3.0"
darling = "0.14.4"
quote = "1.0.26"
syn = "2.0.10"
async-graphql = "3.0.19"

relay_spec = { path = "../relay_spec" }
relay_derive = { path = "../relay_derive" }
